--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
     <meta charset="utf-8">
     <title>TITLE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Your link to your CSS file -->
-    <link rel="stylesheet" href="">
-    <!-- Your Javascript file goes here -->
-    <script src="" async defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="app.js" async defer></script>
   </head>
   <body>
-    <!-- your HTML should go here -->
     <nav>
-      <h1>Let's Play the Guessing Number Game!</h1>
+      <h1 style="font-size: 44px">Let's Play the <span style="color: rgb(250, 130, 0)">Guessing Game!</span></h1>
+      <h4>You have <span id="chances" style="color: rgb(250, 130, 0)">7</span> chances to guess the correct number.</h4>
+      <h6>Relax. It's between 1 and 20</h6>
     </nav>
-
-
+      <div class="answer-class">
+        <label id="answer-text">
+          Answer<br>
+            |<br>
+            <div class="arrow">V</div>
+        </label>
+      </div>
+      <div class="my-guess">
+        <input id="answer" type="text" maxlength="2" placeholder="I need to think of a number">
+        <button onclick="guessingGame()" id="button">Is this your answer?</button>
+      </div>
+    <p id="hint"></p>
+    <div id="game-over"></div>
   </body>
 </html>
+
